<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storyPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app_color"
    tools:context=".StoryPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:text="@string/s_name"
        android:textColor="@color/colorApp"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/colorApp"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="10dp"
        android:paddingTop="16dp"
        android:text="@string/crafter_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_app_color"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageStoryPage"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/app_name"
                android:transitionName="imageTransition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/my_image" />

            <Button
                android:id="@+id/buttonSelectImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:padding="16dp"
                android:stateListAnimator="@android:anim/bounce_interpolator"
                android:text="@string/add_image"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/addingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="start|top"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/hint_text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="250"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/buttonSaveStory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:stateListAnimator="@android:anim/bounce_interpolator"
                android:text="@string/save"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>